<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <TextView
                    android:text="@string/recipe_detail_step_description_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <include
                    layout="@layout/include_recipe_step_description"
                    android:visibility="visible"
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_video"
                android:orientation="vertical"
                android:layout_weight="7"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <TextView
                    android:text="@string/recipe_detail_step_video_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <include
                    layout="@layout/include_recipe_step_video"
                    android:visibility="visible"
                    android:id="@+id/video"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_thumbnail"
                android:orientation="vertical"
                android:layout_weight="7"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <TextView
                    android:text="@string/recipe_detail_step_thumbnail_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <include
                    layout="@layout/include_recipe_step_thumbnail"
                    android:visibility="visible"
                    android:id="@+id/thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>
</layout>